--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "razorpay/razorpay": "2.*",
         "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-permission": "^3.11",
+        "spatie/laravel-sitemap": "^5.8",
         "twilio/sdk": "^6.18",
         "webpatser/laravel-countries": "dev-master",
         "yajra/laravel-datatables-buttons": "^4.0",
